[project]
name = "simple-diffusion"
version = "0.1.0"
description = "Simple diffusion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.10.5",
    "jax>=0.6.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "optax>=0.2.4",
    "ray[data]>=2.44.1",
    "tqdm>=4.67.1",
]


[tool.ruff]
line-length=100
